--- a/pages/index.mdx
+++ b/pages/index.mdx
@@ -1,25 +1,13 @@
 ---
 type: page
-title: About
-date: 2021-03-19
+title: about
+date: 2023-02-25
 ---
 
-# Your Name
 
-Hey, I'm a Senior Software Engineer at Company. I enjoy working with Next.js and crafting beautiful front-end experiences.
+# Mayura Andrew 👨🏻‍💻
 
-This portfolio is built with **Next.js** and a library called [Nextra](https://nextra.vercel.app/). It allows you to write Markdown and focus on the _content_ of your portfolio.
-
-[**Deploy your own**](https://vercel.com/new/clone?repository-url=https://github.com/vercel/next.js/tree/canary/examples/blog&project-name=portfolio&repository-name=portfolio) in a few minutes.
+Hi!👋, Welcome to my minimalistic webpage. I'll continue sharing my projects and blogs here. 
+If you need to catch up with me, please click on "whoami" to learn more about me:) cheers!🍻
 
 ---
-
-<div>
-  Twitter [@yourname](https://twitter.com/yourname)
-  <br />
-  GitHub [@yourname](https://github.com/yourname)
-  <br />
-  Instagram [@yourname](https://instagram.com/yourname)
-  <br />
-  Email your@name.com
-</div>
