--- a/pages/index.mdx
+++ b/pages/index.mdx
@@ -3,9 +3,10 @@ type: page
 title: about
 date: 2023-02-25
 ---
+---
 
+## Mayura Andrew 👨🏻‍💻
 
-# Mayura Andrew 👨🏻‍💻
 
 Hi!👋, Welcome to my minimalistic webpage. I'll continue sharing my projects and blogs here. 
 If you need to catch up with me, please click on "whoami" to learn more about me:) cheers!🍻
