--- a/pages/whoami.mdx
+++ b/pages/whoami.mdx
@@ -20,7 +20,7 @@ this exciting and innovative movement.
 
 - Twitter [@mayura-andrew](https://twitter.com/mayura-andrew)
 - GitHub [@mayura-alahakoon](https://github.com/mayura-alahakoon)
-- LinkedIn [@mayura-alahakoon](https://www.linkedin.com/in/mayura-andrew-827381201)
+- LinkedIn [@mayura-andrew](https://www.linkedin.com/in/mayura-andrew-827381201)
 - Email mayuraalahakoon@gmail.com
 
 ---
