--- a/pages/projects.mdx
+++ b/pages/projects.mdx
@@ -20,4 +20,5 @@ Learners should be able to access the best resources effortlessly and without di
 
 ---
 - GitHub [@mayura-alahakoon](https://github.com/mayura-alahakoon)
+- Sample Site - (https://needresourcefree.netlify.app/)
 ---
