--- a/pages/whoami.mdx
+++ b/pages/whoami.mdx
@@ -19,7 +19,7 @@ this exciting and innovative movement.
 ---
 
 - Twitter [@mayura-andrew](https://twitter.com/mayura-andrew)
-- GitHub [@mayura-alahakoon](https://github.com/mayura-alahakoon)
+- GitHub [@mayura-andrew](https://github.com/mayura-andrew)
 - LinkedIn [@mayura-andrew](https://www.linkedin.com/in/mayura-andrew-827381201)
 - Email mayuraalahakoon@gmail.com
 
