--- a/pages/projects.mdx
+++ b/pages/projects.mdx
@@ -1,10 +1,10 @@
 ---
 type: page
-title: projects
+title: projects🚀
 date: 2021-03-18
 ---
 ---
-# Projects 🚀
+# Projects
 
 Here's my current side-projects🚀
 
