--- a/pages/whoami.mdx
+++ b/pages/whoami.mdx
@@ -1,10 +1,10 @@
 ---
 type: page
-title: whoami
+title: whoami🤖
 date: 2023-03-28
 ---
 ---
-# whoami 🤖
+# whoami 
 
 Hey 👋, My name is Mayura Andrew and I'm a 21-year-old undergraduate from wonderfull Sri Lanka🇱🇰.  Currently, I am pursuing Bachelor's degrees in Software Engineering and Network Engineering at The Open University of Sri Lanka and Esoft Metro Campus.
 I am a knowledgable and experienced Linux enthusiast with a strong passion for open-source technologies. As an open-source enthusiast, I am constantly exploring and experimenting with various technologies and tools to expand my knowledge and skills.
