--- a/pages/projects.mdx
+++ b/pages/projects.mdx
@@ -19,6 +19,6 @@ My vision for this project is to provide better online resources for learners th
 Learners should be able to access the best resources effortlessly and without difficulty.
 
 ---
-- GitHub [@mayura-alahakoon](https://github.com/mayura-andrew)
+- GitHub [@mayura-andrew](https://github.com/mayura-andrew)
 - Sample Site - (https://needresourcefree.netlify.app/)
 ---
