--- a/pages/projects.mdx
+++ b/pages/projects.mdx
@@ -8,7 +8,7 @@ date: 2021-03-18
 
 Here's my current side-projects.
 
-### NeedResource 
+### knowlihub 
 
 This is my new side project,a free online resources library that will be a 
 community-driven learning platform. This project is still in the planning stage:) 
