fixed project link

--- a/pages/projects.mdx
+++ b/pages/projects.mdx
@@ -20,5 +20,5 @@ Learners should be able to access the best resources effortlessly and without di
 
 ---
 - GitHub [@mayura-andrew](https://github.com/mayura-andrew)
-- Sample Site - (https://needresourcefree.netlify.app/)
+- Sample Site - (https://knowlihub.netlify.app/)
 ---
