--- a/pages/index.mdx
+++ b/pages/index.mdx
@@ -5,10 +5,10 @@ date: 2023-02-25
 ---
 ---
 
-## Mayura Andrew 👨🏻‍💻
+## Hi!👋, I'm Mayura Andrew 👨🏻‍💻
 
 
-Hi!👋, Welcome to my minimalistic webpage. I'll continue sharing my projects and blogs here. 
+Welcome to my minimalistic webpage. I'll continue sharing my projects and blogs here. 
 If you need to catch up with me, please click on "whoami" to learn more about me:) cheers!🍻
 
 ---
