added project link

--- a/pages/projects.mdx
+++ b/pages/projects.mdx
@@ -43,7 +43,7 @@ Join Us on the Journey
 #### As we embark on this mission, Knowlihub invites you to join us in reimagining education. Together, let's build a future where knowledge knows no boundaries, and every mind is equipped to create positive change.
 ---
 
-- Platform - (Coming Soon ...⚙️)
+- Platform - [@Knowlihub](https://mayura-andrew.github.io/Knowlihub/)(Coming Soon ...⚙️) 
 - GitHub [@mayura-andrew](https://github.com/mayura-andrew)
 
 
