add discord server

--- a/pages/projects.mdx
+++ b/pages/projects.mdx
@@ -45,6 +45,7 @@ Join Us on the Journey
 
 - Platform - [Coming Soon ...⚙️](https://mayura-andrew.github.io/Knowlihub/)
 - GitHub [@mayura-andrew](https://github.com/mayura-andrew)
+- Discord [@Knowlihub](https://discord.gg/VkxFQxba)
 
 
 ---
