--- a/pages/whoami.mdx
+++ b/pages/whoami.mdx
@@ -15,7 +15,7 @@ this exciting and innovative movement. 🚀🤖👨‍💻
 
 ---
 
-- Email mayuraandrew.tech@gmail.com
+- Email mayuraalahakoon@gmail.com
 - LinkedIn [@mayura-andrew](https://www.linkedin.com/in/mayura-alahakoon-827381201/)
 - GitHub [@mayura-andrew](https://github.com/mayura-andrew)
 
