--- a/pages/whoami.mdx
+++ b/pages/whoami.mdx
@@ -6,8 +6,8 @@ date: 2023-03-28
 ---
 # whoami 
 
-Hey 👋, My name is Mayura (Andrew) Alahakoon and I'm a 21-year-old Software Engineering undergraduate at The Open University of Sri Lanka🇱🇰.  
-I am a dedicated and curious Software Engineer with a profound enthusiasm for open-source technologies. 
+## Profile 👤
+Hey 👋, My name is Mayura (Andrew) Alahakoon. I am a dedicated and curious Software Engineer with a profound enthusiasm for open-source technologies. 
 My journey as an open-source enthusiast involves relentless exploration and experimentation with a 
 diverse array of technologies and tools, all aimed at continuously enhancing my expertise. 
 I believe that open-source is the future of software development and I am committed to being a part of 
@@ -15,6 +15,30 @@ this exciting and innovative movement. 🚀🤖👨‍💻
 
 ---
 
+## Education 👨‍🎓
+
+- Bachelor of Science in Software Engineering (Hons) - Faculty of Engineering Technology, The Open University of Sri Lanka 🇱🇰
+    - First year (Completed : Sept 2022 - 2023)
+    - Second year (Starting in : Jan 2024)
+
+- Pearson BTEC Level 5 Higher National Diploma (RQF) INTERNATIONAL in Computing, specializing in Network Engineering
+    - Result : Merit Pass (Sept 2021 - Aug 2023)
+
+- Technology Stream - GCE Advanced Level - Government Science College, Matale, Sri Lanka - (2019-2021)
+    - Information and Communication Technology
+    - Bio Systems Technology
+    - Science for Technology
+---
+
+## Currently Foucsing on 🔍
+
+- Data Structures and Algorithms (using C, Python and Go)
+- Mathematics for Computing
+- Backend Engineering Technologies 
+
+---
+
+## Say hi👋 to me, 
 - Email mayuraalahakoon@gmail.com
 - LinkedIn [@mayura-andrew](https://www.linkedin.com/in/mayura-alahakoon-827381201/)
 - GitHub [@mayura-andrew](https://github.com/mayura-andrew)
