--- a/pages/index.mdx
+++ b/pages/index.mdx
@@ -9,6 +9,6 @@ date: 2023-02-25
 
 
 Welcome to my minimalistic webpage. I'll continue sharing my projects and blogs here. 
-If you need to catch up with me, please click on "whoami" to learn more about me:) cheers!🍻
+If you need to catch up with me, please click on ["#whoami"](whoami) to learn more about me:) cheers!🍻
 
 ---
