--- a/pages/whoami.mdx
+++ b/pages/whoami.mdx
@@ -38,10 +38,10 @@ this exciting and innovative movement. 🚀🤖👨‍💻
 
 ---
 
-## Say hi👋 to me, 
-- Email mayuraalahakoon@gmail.com
-- LinkedIn [@mayura-andrew](https://www.linkedin.com/in/mayura-alahakoon-827381201/)
+## Say hi👋 to me :) 
 - GitHub [@mayura-andrew](https://github.com/mayura-andrew)
+- LinkedIn [@mayura-andrew](https://www.linkedin.com/in/mayura-alahakoon-827381201/)
+- Email mayuraalahakoon@gmail.com
 
 ---
 
