--- a/pages/whoami.mdx
+++ b/pages/whoami.mdx
@@ -7,6 +7,9 @@ date: 2023-03-28
 # whoami 
 
 ## Profile 👤
+
+![me:)](public/images/me.png)
+
 Hey 👋, My name is Mayura (Andrew) Alahakoon. I am a dedicated and curious Software Engineer with a profound enthusiasm for open-source technologies. 
 My journey as an open-source enthusiast involves relentless exploration and experimentation with a 
 diverse array of technologies and tools, all aimed at continuously enhancing my expertise. 
