--- a/pages/whoami.mdx
+++ b/pages/whoami.mdx
@@ -41,6 +41,10 @@ this exciting and innovative movement. 🚀🤖👨‍💻
 
 ---
 
+## Resume 📎 -> [View](public/doc/RESUME_Mayura_Alahakoon.pdf)
+
+---
+
 ## Say hi👋 to me :) 
 - GitHub [@mayura-andrew](https://github.com/mayura-andrew)
 - LinkedIn [@mayura-andrew](https://www.linkedin.com/in/mayura-alahakoon-827381201/)
