--- a/pages/whoami.mdx
+++ b/pages/whoami.mdx
@@ -41,7 +41,8 @@ this exciting and innovative movement. 🚀🤖👨‍💻
 
 ---
 
-## Resume 📎 -> [View](https://github.com/mayura-andrew/mayura_andrew/blob/fe0449c3e70b98a17b2649e412fb355a32db45bb/public/doc/RESUME_Mayura_Alahakoon.pdf)
+## Resume 📎 -> [View](https://drive.google.com/file/d/1QWgLrhqUqU6NvfrCBi2gDxkhz7aLbod6/view?usp=sharing)
+
 
 ---
 
