added Email Subscribe

--- a/pages/whoami.mdx
+++ b/pages/whoami.mdx
@@ -38,6 +38,8 @@ this exciting and innovative movement. 🚀🤖👨‍💻
 - Data Structures and Algorithms (using C, Python and Go)
 - Mathematics for Computing
 - Backend Engineering Technologies 
+- Cloud Native Application Development
+
 
 ---
 
