Fixed some typoes in posts

--- a/pages/whoami.mdx
+++ b/pages/whoami.mdx
@@ -39,7 +39,7 @@ this exciting and innovative movement. 🚀🤖👨‍💻
 - Mathematics for Computing
 - Backend Engineering Technologies 
 - Cloud Native Application Development
-
+- Machine Learning
 
 ---
 
