fixed profile photo

--- a/pages/whoami.mdx
+++ b/pages/whoami.mdx
@@ -2,13 +2,16 @@
 type: page
 title: whoami🤖
 date: 2023-03-28
+ 
 ---
 ---
 # whoami 
 
 ## Profile 👤
 
-![me:)](public/images/me.png)
+import Image from 'next/image'
+
+<Image src="" alt="Hello" width={80} height={80} />
 
 Hey 👋, My name is Mayura (Andrew) Alahakoon. I am a dedicated and curious Software Engineer with a profound enthusiasm for open-source technologies. 
 My journey as an open-source enthusiast involves relentless exploration and experimentation with a 
