fixed profile image

--- a/pages/whoami.mdx
+++ b/pages/whoami.mdx
@@ -11,7 +11,7 @@ date: 2023-03-28
 
 import Image from 'next/image'
 
-<Image src="" alt="Hello" width={80} height={80} />
+<Image src="https://raw.githubusercontent.com/mayura-andrew/mayura_andrew/main/public/images/profile.png?token=GHSAT0AAAAAACMETC6YLHX5SNK4HUEBOKCWZMS34UQ" alt="Hello" width={200} height={200} />
 
 Hey 👋, My name is Mayura (Andrew) Alahakoon. I am a dedicated and curious Software Engineer with a profound enthusiasm for open-source technologies. 
 My journey as an open-source enthusiast involves relentless exploration and experimentation with a 
