--- a/pages/whoami.mdx
+++ b/pages/whoami.mdx
@@ -8,7 +8,10 @@ date: 2023-03-28
 
 ## Profile 👤
 
-![me:)](public/images/me.png)
+import Profile from '/public/images/profile.png'
+import Image from 'next/image'
+
+<Image src={Profile} alt="Hello" width={200} height={200} loading="lazy" />
 
 Hey 👋, My name is Mayura (Andrew) Alahakoon. I am a dedicated and curious Software Engineer with a profound enthusiasm for open-source technologies. 
 My journey as an open-source enthusiast involves relentless exploration and experimentation with a 
@@ -39,7 +42,7 @@ this exciting and innovative movement. 🚀🤖👨‍💻
 - Mathematics for Computing
 - Backend Engineering Technologies 
 - Cloud Native Application Development
-
+- Machine Learning
 
 ---
 
