updated profile photo

--- a/pages/whoami.mdx
+++ b/pages/whoami.mdx
@@ -12,9 +12,8 @@ date: 2023-03-28
 import Profile from '/public/images/profile.png'
 import Image from 'next/image'
 
-<Image src={Profile} alt="Hello" width={200} height={200} loading="lazy" />
-
-Hey 👋, My name is Mayura (Andrew) Alahakoon. I am a dedicated and curious Software Engineer with a profound enthusiasm for open-source technologies. 
+<Image src={Profile} alt="Hello" width={200} height={100} loading="lazy" className="linkedin-profile-photo" />
+Hey 👋, My name is Mayura (Andrew) Alahakoon. I am a dedicated and curious Software Engineer with a profound enthusiasm for open-source technologies.
 My journey as an open-source enthusiast involves relentless exploration and experimentation with a 
 diverse array of technologies and tools, all aimed at continuously enhancing my expertise. 
 I believe that open-source is the future of software development and I am committed to being a part of 
