--- a/pages/whoami.mdx
+++ b/pages/whoami.mdx
@@ -9,7 +9,7 @@ date: 2023-03-28
 
 ## Profile 👤
 
-import Profile from '/public/images/profile.png'
+import Profile from '/public/images/profile.jpg'
 import Image from 'next/image'
 
 <Image src={Profile} alt="Hello" width={200} height={100} loading="lazy" className="linkedin-profile-photo" />
