--- a/pages/whoami.mdx
+++ b/pages/whoami.mdx
@@ -13,6 +13,10 @@ import Image from 'next/image'
 
 <Image src={Profile} alt="Hello" width={200} height={200} loading="lazy" />
 
+---
+<i>I'm still learning -> trying to better my self :)</i>
+---
+
 Hey 👋, My name is Mayura (Andrew) Alahakoon. I am a dedicated and curious Software Engineer with a profound enthusiasm for open-source technologies. 
 My journey as an open-source enthusiast involves relentless exploration and experimentation with a 
 diverse array of technologies and tools, all aimed at continuously enhancing my expertise. 
@@ -25,7 +29,7 @@ this exciting and innovative movement. 🚀🤖👨‍💻
 
 - Bachelor of Science in Software Engineering (Hons) - Faculty of Engineering Technology, The Open University of Sri Lanka 🇱🇰
     - First year (Completed : Sept 2022 - 2023)
-    - Second year (Starting in : Jan 2024)
+    - Second year (Started : Jan 2024)
 
 - Pearson BTEC Level 5 Higher National Diploma (RQF) INTERNATIONAL in Computing, specializing in Network Engineering
     - Result : Merit Pass (Sept 2021 - Aug 2023)
