--- a/pages/whoami.mdx
+++ b/pages/whoami.mdx
@@ -9,10 +9,9 @@ date: 2023-03-28
 
 ## Profile 👤
 
-import Profile from '/public/images/profile.jpg'
+import Profile from '/public/images/profile.png'
 import Image from 'next/image'
 
-<Image src={Profile} alt="Hello" width={200} height={200} loading="lazy" />
 
 ---
 <i>I'm still learning -> trying to better my self :)</i>
@@ -30,8 +29,8 @@ this exciting and innovative movement. 🚀🤖👨‍💻
 ## Education 👨‍🎓
 
 - Bachelor of Science in Software Engineering (Hons) - Faculty of Engineering Technology, The Open University of Sri Lanka 🇱🇰
-    - First year (Completed : Sept 2022 - 2023)
-    - Second year (Started : Jan 2024)
+    - First Year (Completed : Sept 2022 - 2023)
+    - Second Year (Started : Jan 2024)
 
 - Pearson BTEC Level 5 Higher National Diploma (RQF) INTERNATIONAL in Computing, specializing in Network Engineering
     - Result : Merit Pass (Sept 2021 - Aug 2023)
