New blog post: ngrok static domain run continuously

--- a/pages/whoami.mdx
+++ b/pages/whoami.mdx
@@ -12,7 +12,7 @@ date: 2023-03-28
 import Profile from '/public/images/profile.png'
 import Image from 'next/image'
 
-<Image src={Profile} alt="Hello" width={200} height={100} loading="lazy" className="linkedin-profile-photo" />
+<Image src={Profile} alt="Hello" width={200} height={100} loading="lazy" className="profile-photo" />
 ---
 <i>I'm still learning -> trying to better my self :)</i>
 ---
@@ -23,7 +23,24 @@ I believe that open-source is the future of software development and I am commit
 this exciting and innovative movement. 🚀🤖👨‍💻
 
 ---
+## Exprience
 
+- Founder - [Knowlihub🧠](https://mayura-andrew.github.io/knowlihub/)
+    - Duration : Sep 2023 - Present
+    - Role : I do everything 😅
+
+- Software Engineer - [Sustainable Education Foundation](https://sefglobal.org/)
+    - Duration : Jan 2024 - Present
+    - Role : My focus remains on identifying and resolving challenges within the codebase while actively seeking opportunities to enhance platform functionality and developing new features.
+
+- Webmaster - [SEDS OUSL]
+
+    - Duration : May 2024 - Present
+    - Role : My role is to develop and maintain upcoming web platform for manage end to end process of the organization.
+
+---
+- Technologies💻 : Go (Golang), TypeScript, React, NodeJS, PostgreSQL, Tailwind CSS, Docker, Git, GitHub, Google Cloud Platform, DigitialOcean
+---
 ## Education 👨‍🎓
 
 - Bachelor of Science in Software Engineering (Hons) - Faculty of Engineering Technology, The Open University of Sri Lanka 🇱🇰
