--- a/pages/whoami.mdx
+++ b/pages/whoami.mdx
@@ -33,7 +33,7 @@ this exciting and innovative movement. 🚀🤖👨‍💻
     - Duration : Jan 2024 - Present
     - Role : My focus remains on identifying and resolving challenges within the codebase while actively seeking opportunities to enhance platform functionality and developing new features.
 
-- Webmaster - [SEDS OUSL]
+- Webmaster - SEDS OUSL
 
     - Duration : May 2024 - Present
     - Role : My role is to develop and maintain upcoming web platform for manage end to end process of the organization.
