--- a/pages/whoami.mdx
+++ b/pages/whoami.mdx
@@ -25,15 +25,15 @@ this exciting and innovative movement. 🚀🤖👨‍💻
 ---
 ## Exprience
 
-- Founder - [Knowlihub🧠](https://mayura-andrew.github.io/knowlihub/)
+- Founder @[Knowlihub🧠](https://mayura-andrew.github.io/knowlihub/)
     - Duration : Sep 2023 - Present
     - Role : I do everything 😅
 
-- Software Engineer - [Sustainable Education Foundation](https://sefglobal.org/)
+- Software Engineer @[Sustainable Education Foundation](https://sefglobal.org/)
     - Duration : Jan 2024 - Present
     - Role : My focus remains on identifying and resolving challenges within the codebase while actively seeking opportunities to enhance platform functionality and developing new features.
 
-- Webmaster - SEDS OUSL
+- Webmaster @SEDS OUSL
 
     - Duration : May 2024 - Present
     - Role : My role is to develop and maintain upcoming web platform for manage end to end process of the organization.
