added new experience

--- a/pages/whoami.mdx
+++ b/pages/whoami.mdx
@@ -33,11 +33,14 @@ this exciting and innovative movement. 🚀🤖👨‍💻
     - Duration : Jan 2024 - Present
     - Role : My focus remains on identifying and resolving challenges within the codebase while actively seeking opportunities to enhance platform functionality and developing new features.
 
-- Webmaster @SEDS OUSL
+- Webmaster @SEDS OUSL, Students for the Exploration and Development of Space Chapter of The Open University of Sri Lanka
 
     - Duration : May 2024 - Present
     - Role : My role is to develop and maintain upcoming web platform for manage end to end process of the organization.
 
+- Assistant Lab Administrator @Esoft Metro Campus, Matale, Sri Lanka
+    - Duration : Jan 2022 - Nov 2022
+    - Role : My role was to assist the lab administrator in managing the computer lab and providing technical support to students and staff.
 ---
 - Technologies💻 : Go (Golang), TypeScript, React, NodeJS, PostgreSQL, Tailwind CSS, Docker, Git, GitHub, Google Cloud Platform, DigitialOcean
 ---
@@ -74,6 +77,7 @@ this exciting and innovative movement. 🚀🤖👨‍💻
 ## Say hi👋 to me :) 
 - GitHub [@mayura-andrew](https://github.com/mayura-andrew)
 - LinkedIn [@mayura-andrew](https://www.linkedin.com/in/mayura-alahakoon-827381201/)
+- Medium [@mayuraandrew](https://medium.com/@mayuraandrew)
 - Email mayuraalahakoon@gmail.com
 
 ---
