Added new article about email api client

--- a/pages/whoami.mdx
+++ b/pages/whoami.mdx
@@ -42,7 +42,7 @@ this exciting and innovative movement. 🚀🤖👨‍💻
     - Duration : Jan 2022 - Nov 2022
     - Role : My role was to assist the lab administrator in managing the computer lab and providing technical support to students and staff.
 ---
-- Technologies💻 : Go (Golang), TypeScript, React, NodeJS, PostgreSQL, Tailwind CSS, Docker, Git, GitHub, Google Cloud Platform, DigitialOcean
+- Technologies💻 : Go (Golang), TypeScript, Python, React, Astro, NodeJS, PostgreSQL, Tailwind CSS, Docker, Git, GitHub, Google Cloud Platform, DigitialOcean
 ---
 ## Education 👨‍🎓
 
