--- a/pages/whoami.mdx
+++ b/pages/whoami.mdx
@@ -69,7 +69,7 @@ this exciting and innovative movement. 🚀🤖👨‍💻
 
 ---
 
-## Resume 📎 -> [View](https://drive.google.com/file/d/1Oi9sLf_4gf455dR00KXv4hBzN_KHVTwA/view?usp=sharing)
+## Resume 📎 -> [View](https://drive.google.com/file/d/1djMGypFi826uuZPqv87_8UW6bqI6V8XH/view)
 
 
 ---
